Remove jsurfer dependency.